--- a/app/src/main/res/layout/activity_conf_estoque.xml
+++ b/app/src/main/res/layout/activity_conf_estoque.xml
@@ -35,15 +35,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/LblDescAniversario"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textAlignment="gravity"
         android:lines="3"
         android:minLines="3"
-
         android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
           unknown printer took a galley "
+        android:textAlignment="gravity"
+        app:layout_constraintBottom_toTopOf="@+id/LblDescAniversario"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/molduraIconFunc"
         app:layout_constraintTop_toBottomOf="@+id/LblNomeFuncionarioText" />
     <!--Titulo da pagina -->
@@ -396,9 +396,9 @@
         android:fontFamily="@font/allerstd"
         android:textSize="16sp"
         android:textStyle="bold"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="308dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="308dp" />
 
     <!--Divisoria do botao-->
 
