--- a/app/src/main/res/layout/activity_view_client.xml
+++ b/app/src/main/res/layout/activity_view_client.xml
@@ -4,30 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.EditProdutoActivity">
-
-    <TextView
-        android:id="@+id/editText"
-        android:layout_width="200dp"
-        android:layout_height="90dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:lines="3"
-        android:minLines="3"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-          unknown printer took a galley "
-        android:textAlignment="gravity"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.166" />
+    tools:context=".Activity.ViewClientActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -41,10 +18,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.233"
+        app:layout_constraintVertical_bias="0.238"
         app:srcCompat="@drawable/moldura_imagem" />
 
     <TextView
@@ -75,7 +52,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Produto"
+        android:text="Cliente"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
@@ -99,20 +76,20 @@
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.107" />
+        app:layout_constraintVertical_bias="0.105" />
 
     <TextView
         android:id="@+id/nameTxtProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Tênis"
+        android:text="João Victor"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,11 +100,11 @@
         android:id="@+id/nameTxtProduct2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="132dp"
-        android:layout_marginLeft="132dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginLeft="140dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="01"
+        android:text="123456789"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,14 +123,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Categoria"
+        android:text="CPF"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.065"
+        app:layout_constraintHorizontal_bias="0.744"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.356" />
+        app:layout_constraintVertical_bias="0.098" />
 
     <TextView
         android:id="@+id/textVieaw4"
@@ -166,24 +143,24 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Tamanho"
+        android:text="Telefone"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.435"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.356" />
+        app:layout_constraintVertical_bias="0.532" />
 
     <TextView
         android:id="@+id/categoryTxtProduct"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginStart="264dp"
+        android:layout_marginLeft="264dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="tênis"
+        android:text="123456789"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -197,13 +174,13 @@
         android:layout_height="31dp"
         android:layout_marginStart="140dp"
         android:layout_marginLeft="140dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="180dp"
         android:fontFamily="@font/allerstd"
-        android:text="37"
+        android:text="joaovictor@gmail.com"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -217,44 +194,24 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Data de compra"
+        android:text="Aniversário"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.958"
+        app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.108" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allerstd"
-        android:text="Validade"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.411"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryTxtProduct2"
-        app:layout_constraintVertical_bias="0.028" />
+        app:layout_constraintVertical_bias="0.325" />
 
     <TextView
         android:id="@+id/dateBuytxtProduct"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginEnd="268dp"
+        android:layout_marginRight="268dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="01/01/2001"
+        android:text="01/01/1990"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -265,16 +222,14 @@
         android:id="@+id/dateBuytxtProduct2"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginEnd="168dp"
-        android:layout_marginRight="168dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="252dp"
+        android:layout_marginRight="252dp"
+        android:layout_marginBottom="128dp"
         android:fontFamily="@font/allerstd"
-        android:text="01/01/2021"
+        android:text="16 123456789"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.577" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
@@ -282,19 +237,16 @@
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="104dp"
         android:fontFamily="@font/allerstd"
-        android:text="Preço"
+        android:text="Endereço"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateBuytxtProduct"
-        app:layout_constraintVertical_bias="0.161" />
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
@@ -305,16 +257,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="164dp"
         android:fontFamily="@font/allerstd"
-        android:text="Quantidade"
+        android:text="Email"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
+        app:layout_constraintHorizontal_bias="0.398"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateBuytxtProduct"
-        app:layout_constraintVertical_bias="0.511" />
+        app:layout_constraintTop_toBottomOf="@+id/nameTxtProduct2"
+        app:layout_constraintVertical_bias="0.863" />
 
     <TextView
         android:id="@+id/textView6"
@@ -327,33 +279,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="236dp"
         android:fontFamily="@font/allerstd"
-        android:text="Cód. Produto"
+        android:text="RG"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.449"
+        app:layout_constraintHorizontal_bias="0.377"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/custtxtProduct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:fontFamily="@font/allerstd"
-        android:text="R$55,55"
-        android:textColor="@android:color/black"
-        app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.821"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/custtxtProduct2"
@@ -365,14 +298,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="01"
+        android:text="Av. Pres. Vargas 1010\nAlto da Boa Vista -\nRibeirão Preto - SP "
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.063"
+        app:layout_constraintHorizontal_bias="0.578"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.534" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/removerBtnProduct"
@@ -386,7 +319,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_estado"
         android:fontFamily="@font/allerstd"
-        android:text="Remover pruduto"
+        android:text="Remover cliente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.889"
@@ -406,7 +339,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_estado"
         android:fontFamily="@font/allerstd"
-        android:text="Alterar pruduto"
+        android:text="Alterar Cliente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
