--- a/app/src/main/res/layout/activity_view_produto.xml
+++ b/app/src/main/res/layout/activity_view_produto.xml
@@ -4,7 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.EditClientActivity">
+    tools:context=".Activity.ViewProdutoActivity">
+
+    <TextView
+        android:id="@+id/editText"
+        android:layout_width="200dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:lines="3"
+        android:minLines="3"
+        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+          unknown printer took a galley "
+        android:textAlignment="gravity"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.166" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -18,10 +41,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.238"
+        app:layout_constraintVertical_bias="0.233"
         app:srcCompat="@drawable/moldura_imagem" />
 
     <TextView
@@ -52,7 +75,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Cliente"
+        android:text="Produto"
         android:textColor="@android:color/black"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
@@ -76,20 +99,20 @@
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintVertical_bias="0.107" />
 
     <TextView
         android:id="@+id/nameTxtProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="João Victor"
+        android:text="Tênis"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,11 +123,11 @@
         android:id="@+id/nameTxtProduct2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="140dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginLeft="132dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="123456789"
+        android:text="01"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,14 +146,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="CPF"
+        android:text="Categoria"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.744"
+        app:layout_constraintHorizontal_bias="0.065"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.098" />
+        app:layout_constraintVertical_bias="0.356" />
 
     <TextView
         android:id="@+id/textVieaw4"
@@ -143,24 +166,24 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Telefone"
+        android:text="Tamanho"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintHorizontal_bias="0.435"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.532" />
+        app:layout_constraintVertical_bias="0.356" />
 
     <TextView
         android:id="@+id/categoryTxtProduct"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
-        android:layout_marginStart="264dp"
-        android:layout_marginLeft="264dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginLeft="28dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="123456789"
+        android:text="tênis"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -174,13 +197,13 @@
         android:layout_height="31dp"
         android:layout_marginStart="140dp"
         android:layout_marginLeft="140dp"
-        android:layout_marginBottom="180dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="joaovictor@gmail.com"
+        android:text="37"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -194,24 +217,44 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Aniversário"
+        android:text="Data de compra"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintHorizontal_bias="0.958"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.108" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/allerstd"
+        android:text="Validade"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.411"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/categoryTxtProduct2"
+        app:layout_constraintVertical_bias="0.028" />
 
     <TextView
         android:id="@+id/dateBuytxtProduct"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginEnd="268dp"
-        android:layout_marginRight="268dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="01/01/1990"
+        android:text="01/01/2001"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -222,14 +265,16 @@
         android:id="@+id/dateBuytxtProduct2"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_marginEnd="252dp"
-        android:layout_marginRight="252dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginEnd="168dp"
+        android:layout_marginRight="168dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="16 123456789"
+        android:text="01/01/2021"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.577" />
 
     <TextView
         android:id="@+id/textView7"
@@ -237,16 +282,19 @@
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Endereço"
+        android:text="Preço"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.771"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateBuytxtProduct"
+        app:layout_constraintVertical_bias="0.161" />
 
     <TextView
         android:id="@+id/textView8"
@@ -257,16 +305,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="164dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Email"
+        android:text="Quantidade"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameTxtProduct2"
-        app:layout_constraintVertical_bias="0.863" />
+        app:layout_constraintTop_toBottomOf="@+id/dateBuytxtProduct"
+        app:layout_constraintVertical_bias="0.511" />
 
     <TextView
         android:id="@+id/textView6"
@@ -279,14 +327,33 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="236dp"
         android:fontFamily="@font/allerstd"
-        android:text="RG"
+        android:text="Cód. Produto"
         android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.377"
+        app:layout_constraintHorizontal_bias="0.449"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/custtxtProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/allerstd"
+        android:text="R$55,55"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.821"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/custtxtProduct2"
@@ -298,14 +365,14 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/allerstd"
-        android:text="Av. Pres. Vargas 1010\nAlto da Boa Vista -\nRibeirão Preto - SP "
+        android:text="01"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/removerBtnProduct"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.578"
+        app:layout_constraintHorizontal_bias="0.063"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.534" />
 
     <Button
         android:id="@+id/removerBtnProduct"
@@ -319,7 +386,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_estado"
         android:fontFamily="@font/allerstd"
-        android:text="Remover cliente"
+        android:text="Remover pruduto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.889"
@@ -339,7 +406,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/tbx_estado"
         android:fontFamily="@font/allerstd"
-        android:text="Alterar Cliente"
+        android:text="Alterar pruduto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
